<resources>
    <!--Commons-->
    <string name="app_name" translatable="false">Score, pls!</string>
    <string name="final_congratulations">Player PLAYER_NAME wins!\nScore: PLAYER_SCORE\nCongratulations!</string>
    <string name="final_congratulations_draw">Draw.\nScore: PLAYER_SCORE\nFriendship wins!!</string>
    <string name="final_draw">Draw</string>
    <!--Questions-->
    <string name="question_gameTitle">What is the name of the game?</string>
    <string name="question_playersCount">How many players will there be?</string>
    <!--Hints-->
    <string name="hint_gameTitle"> </string>
    <string name="hint_blankGameTitle">The name is blank!</string>
    <string name="hint_playerName">Input player\'s name</string>
    <string name="hint_playerNameBlank">Player\'s name is blank!</string>
    <string name="hint_insert_point">Input points</string>
    <string name="hint_players_list_isEmpty">Player\'s list is empty!</string>
    <string name="hint_points_empty">Insert the points</string>
    <string name="hint_empty_inappropriate">Inappropriate number</string>
    <string name="hint_exit">Press "Back" again to exit</string>
    <string name="hint_clearTable">Tap again to clear history</string>
    <string name="hint_clearTable_done">History was cleared, last game saved!</string>

    <!--Buttons-->
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_add">Add</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_restart">Restart</string>
    <string name="button_finish">Finish</string>
    <!--Buttons desc-->
    <string name="desc_button_minus">Subtract number</string>
    <string name="desc_button_plus">Add number</string>
    <string name="desc_button_restart">Begin new game</string>
    <!--menu buttons-->
    <string name="menu_about">About</string>
    <!--context menu buttons-->
    <string name="contextMenu_clear">Clear</string>
    <!--content description-->
    <string name="star_desc">Congratulations!</string>
    <!--log table on final screen-->
    <string name="final_logTable_tableName">Previous result</string>
    <string name="final_logTable_title">Title</string>
    <string name="final_logTable_score">Score</string>
    <string name="final_logTable_player">Player</string>
</resources>
