<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/player"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:textSize="36sp"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/playerScore"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/player" android:textSize="36sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/controlPanel"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/player"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/confirm"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@android:drawable/button_onoff_indicator_on"
                android:id="@+id/removePoint" android:layout_weight="1"
                android:contentDescription="@string/desc_button_minus"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/inputPoints" android:layout_weight="2" android:importantForAutofill="no"
                tools:targetApi="o" android:hint="@string/hint_insert_point"/>
        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/addPoint" android:layout_weight="1"
                android:contentDescription="@string/desc_button_plus"/>
    </LinearLayout>
    <Button
            android:text="@string/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/confirm"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:id="@+id/cancel" app:layout_constraintBaseline_toBaselineOf="@+id/confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>