<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textSize="36sp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/playersList"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"/>
    <Button
            android:text="@string/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/nextButton"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
    />
    <Button
            android:text="@string/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/backButton"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/backButton"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:id="@+id/linearLayout3">
        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@android:drawable/button_onoff_indicator_on"
                android:id="@+id/minusButton" android:layout_weight="1"
                android:contentDescription="@string/desc_button_minus"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/inputPoints" android:layout_weight="2" android:autofillHints="" tools:targetApi="o"
                android:hint="@string/hint_insert_point"/>
        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/plusButton" android:layout_weight="1"
                android:contentDescription="@string/desc_button_plus"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>