<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textSize="36sp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/playersList"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/player"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:hint="@string/hint_playerName"
            app:layout_constraintBaseline_toBaselineOf="@+id/addPlayerButton"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
    />
    <Button
            android:text="@string/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPlayerButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/nextButton"/>
    <Button
            android:text="@string/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/nextButton"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
    />
    <Button
            android:text="@string/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/backButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>