<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/downStarRight" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/congratText"
            app:layout_constraintStart_toEndOf="@+id/downStarCenter" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:contentDescription="@string/star_desc"/>
    <TextView
            android:text="@string/final_congratulations"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/congratText" android:textSize="30sp"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
    />
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/upstarCenter"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/congratText"
            android:contentDescription="@string/star_desc"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/upstarRight"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/congratText"
            app:layout_constraintStart_toEndOf="@+id/upstarCenter" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:contentDescription="@string/star_desc"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/upstartLeft"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/congratText"
            app:layout_constraintEnd_toStartOf="@+id/upstarCenter" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:contentDescription="@string/star_desc"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/downStarLeft" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/congratText" app:layout_constraintEnd_toStartOf="@+id/downStarCenter"
            android:layout_marginRight="24dp" android:layout_marginEnd="24dp"
            android:contentDescription="@string/star_desc"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/downStarCenter" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/congratText"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/star_desc"/>
    <Button
            android:text="@string/desc_button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/restartButton" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/downStarCenter" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>